continuing to port to neoforge 1.21.1 - game starts and datagen works